test/Sema/objc_attr_requires_module_3.code
// RUN: %target-language-frontend -typecheck -verify -enable-objc-interop %s

class TestClass1 {
#if false
  @objc fn testMethod() {} // OK, in inactive block
#endif
}

#if false
class TestClass2 {
  @objc fn testMethod() {} // OK, in inactive block
}
#endif

#if false
class TestClass3 {
#if true
  @objc fn testMethod() {} // OK, in inactive block
#endif
}
#endif

#if false
#if true
class TestClass4 {
  @objc fn testMethod() {} // OK, in inactive block
}
#endif
#endif

class TestClass5 {
#if true
  // pass
#else
  @objc fn testMethod() {} // OK, in inactive block
#endif
}

#if true
class TestClass6 {
  @objc fn testMethod() {} // expected-error {{@objc attribute used without importing module 'Foundation'}}
}
#endif
